<resources>
    <string name="app_name">Smart_Campus</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="contact_number">Contact Number</string>
    <string name="gender">Gender:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="address">Address</string>
    <string name="college_name">College Name</string>
    <string name="pass_out_year">Passout Year</string>
    <string name="user_university">University Name</string>
    <string name="avg_cgpa">CGPA</string>
    <string name="active_backlogs">Active Backlogs</string>
    <string name="academic_details">Academic Details</string>
    <string name="year_gap">Year Gap</string>

    <string name="profile_save_button">Save Changes</string>
    <string name="menu_company_save_icon_title">Save</string>


    <string name="company_name">Company </string>

    <string name="company_post_title">Post : </string>
    <string name="text_company_name">Company : </string>
    <string name="company_experience_title">Experience : </string>
    <string name="company_location_title">Company Location : </string>
    <string name="company_skills_title">Skills : </string>

    <string name="company_job_id">Job Id : </string>
    <string name="company_status_exp_title">Exp : </string>
    <string name="apply_company_details">Apply</string>
    <string name="profile_company_title">Profile : </string>
    <string name="job_description_title">Job Description : </string>
    <string name="company_about_title">About Company : </string>

</resources>