<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView"
        app:cardCornerRadius="2dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/user_profile_image"
                app:civ_circle_background_color="@android:color/transparent"
                android:elevation="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_profile_name"
                android:text="@string/user_name"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/user_profile_image"
                android:layout_marginStart="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_profile_email"
                android:text="@string/user_email"
                android:layout_toEndOf="@id/user_profile_image"
                android:layout_marginStart="30dp"
                android:layout_below="@id/user_profile_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="46dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:id="@+id/user_profile_date_of_birth_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/date_of_birth"
                    android:id="@+id/user_profile_user_date"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:id="@+id/user_profile_contact_number_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_below="@+id/user_profile_date_of_birth_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_profile_contact"
                    android:hint="@string/contact_number"
                    android:maxLength="10"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:id="@+id/gender_title"
                android:layout_marginTop="15dp"
                android:layout_below="@id/user_profile_contact_number_layout"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:id="@+id/radio_gender_selector"
                android:layout_below="@id/gender_title">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/gender_male"
                    android:drawableTop="@drawable/ic_man"
                    android:text="@string/gender_male"
                    android:button="@android:color/transparent"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/gender_female"
                    android:text="@string/gender_female"
                    android:drawableTop="@drawable/ic_girl"
                    android:button="@android:color/transparent"/>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/user_profile_user_address"
                android:background="@android:color/transparent"
                android:layout_below="@+id/radio_gender_selector"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:id="@+id/user_profile_user_address_input" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:text="@string/academic_details"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_below="@+id/user_profile_user_address"
                android:id="@+id/user_profile_academic_details_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:id="@+id/horizontal_line"
                android:background="@color/black"
                android:layout_below="@+id/user_profile_academic_details_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/horizontal_line"
                android:id="@+id/user_profile_college_layout"
                android:background="@android:color/transparent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_profile_college_name"
                    android:hint="@string/college_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:id="@+id/user_profile_pass_out_year_layout"
                android:layout_below="@+id/user_profile_college_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/pass_out_year"
                    android:id="@+id/user_profile_pass_out_year" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:id="@+id/user_profile_university_layout"
                android:layout_below="@+id/user_profile_pass_out_year_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/user_university"
                    android:id="@+id/user_profile_university" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:id="@+id/user_profile_average_cgpa_layout"
                android:layout_below="@+id/user_profile_university_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/avg_cgpa"
                    android:id="@+id/user_average_cgpa" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/user_profile_year_gap_layout"
                android:background="@android:color/transparent"
                android:layout_below="@+id/user_profile_average_cgpa_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/year_gap"
                    android:id="@+id/user_profile_year_gap" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:id="@+id/user_profile_active_backlogs_layout"
                android:layout_below="@+id/user_profile_year_gap_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/active_backlogs"
                    android:id="@+id/user_profile_active_backlogs" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/purple_500"
                android:text="@string/profile_save_button"
                android:id="@+id/user_profile_user_save_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_below="@+id/user_profile_active_backlogs_layout" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>