<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_post_title"
                android:id="@+id/recyclerCompanyPost"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:justificationMode="inter_word"
                android:layout_toEndOf="@+id/recyclerCompanyPost"
                android:id="@+id/recyclerCompanyPostName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:layout_marginTop="7dp"
                android:id="@+id/recyclerCompanyName"
                android:layout_below="@id/recyclerCompanyPost"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:justificationMode="inter_word"
                android:id="@+id/recyclerCompanyName_name"
                android:layout_toEndOf="@id/recyclerCompanyName"
                android:layout_below="@id/recyclerCompanyPostName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="7dp"
                android:text="@string/company_experience_title"
                android:id="@+id/recyclerCompanyExp"
                android:layout_below="@+id/recyclerCompanyName"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:justificationMode="inter_word"
                android:id="@+id/recyclerCompanyExpDetails"
                android:layout_toEndOf="@id/recyclerCompanyExp"
                android:layout_below="@+id/recyclerCompanyName_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="6dp"
                android:text="@string/company_location_title"
                android:id="@+id/recyclerCompanyLocation"
                android:layout_below="@+id/recyclerCompanyExp"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:justificationMode="inter_word"
                android:id="@+id/recyclerCompanyLocationName"
                android:layout_below="@+id/recyclerCompanyExpDetails"
                android:layout_toEndOf="@id/recyclerCompanyLocation"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="6dp"
                android:text="@string/company_skills_title"
                android:id="@+id/recyclerCompanySkill"
                android:layout_below="@id/recyclerCompanyLocation"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:justificationMode="inter_word"
                android:id="@+id/recyclerCompanySkillName"
                android:layout_below="@+id/recyclerCompanyLocationName" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
